tests/errors/sem.arg-count-mismatch.fiicall-call.or
main :: () -> void {
    @fficall "asdasd.or", "decl", void, "test", 10;
    @fficall "asdasd.or", "decl", void, "test";
};
